# kosmos

./: .gitignore  .prettierignore  .prettierrc  bump-version.js  components.json  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  splash.html  tsconfig.json  tsconfig.node.json  vite.config.ts
.husky/: pre-commit
src/: App.tsx  App.vue  MainScreen.tsx  Root.tsx  SplashScreen.tsx  bindings.ts  main.ts  main.tsx  menu.ts  routes.ts  splash.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: bundle.rs  cmd.rs  config.rs  constants.rs  db.rs  enums.rs  error.rs  file.rs  font.rs  json.rs  lib.rs  main.rs  splash.rs
src-tauri/src/book/: data.rs  manifest.rs  mod.rs  service.rs
src-tauri/src/cache/: data.rs  service.rs
src-tauri/src/chapter/: data.rs  mod.rs  service.rs
src-tauri/src/cmd/: config.rs  mod.rs  project.rs  util.rs
src-tauri/src/manager/: app.rs  cache.rs  command.rs  mod.rs  project.rs
src-tauri/src/project/: cache.rs  data.rs  mod.rs  repository.rs  service.rs
src-tauri/src/resources/: schema.sql
src-tauri/src/version/: service.rs
src/app/: Splash.tsx  index.ts
src/app/dashboard/: AppSidebar.tsx  Dashboard.tsx  MainContent.tsx  PrimarySidebar.tsx  Sidebar.tsx  SidebarButton.tsx  SidebarItem.tsx  SidebarSeparator.tsx  TreeSidebar.tsx
src/app/old-dashboard/: Dashboard.tsx
src/app/story/: Story.tsx
src/app/temp/: Temp.tsx
src/components/custom/color/: ColorButton.vue  ColorPopover.vue  index.ts
src/components/custom/shortcut-keys/: ShortcutKeys.vue  index.ts
src/components/custom/tabs/: TabsProvider.vue  index.ts  utils.ts
src/components/custom/theme/: ThemeToggle.vue
src/components/editor/: RichTextEditor.tsx  ToolBar.tsx
src/components/theme/: ThemeToggle.vue
src/components/tiptap/blockquote/: BlockquoteButton.vue  index.ts  utils.ts
src/components/tiptap/code-block/: CodeBlockButton.vue  index.ts  utils.ts
src/components/tiptap/heading/: HeadingButton.vue  HeadingDropdown.vue  index.ts  utils.ts
src/components/tiptap/highlight/: HighlightButton.vue  HighlightPopover.vue  index.ts  utils.ts
src/components/tiptap/link/: LinkPopover.vue  index.ts  utils.ts
src/components/tiptap/list/: ListButton.vue  ListDropdown.vue  ListGroup.vue  ListPopover.vue  index.ts  types.ts  utils.ts
src/components/tiptap/mark/: MarkButton.vue  MarkGroup.vue  index.ts  utils.ts
src/components/tiptap/text-align/: TextAlignButton.vue  TextAlignDropdown.vue  TextAlignGroup.vue  TextAlignPopover.vue  index.ts  utils.ts
src/components/tiptap/undo-redo/: UndoRedoButton.vue  UndoRedoGroup.vue  index.ts  types.ts  utils.ts
src/components/ui/: Button.tsx  Tooltip.tsx  button.tsx  popover.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  tab-provider.tsx  tabs.tsx  tooltip.tsx  tree.tsx
src/components/ui/button-group/: ButtonGroup.vue  ButtonGroupSeparator.vue  index.ts  (+1 more)
src/composables/: index.ts  useTabs.ts  useTabsStore.ts
src/events/: invoke.ts
src/lib/: tiptap.ts
src/libs/: index.ts
src/modules/dashboard/: Dashboard.tsx  Dashboard.vue  Explorer.vue  MainContent.tsx  MainContent.vue  PrimarySidebar.tsx  PrimarySidebar.vue  Startup.vue  TabsList.vue  TreeSidebar.tsx
src/modules/settings/: Settings.vue  SettingsProvider.vue  index.ts  utils.ts
src/modules/startup/: NewProjectDialog.vue  OpenProjectDialog.vue  RecentProjectsTable.vue  Startup.vue  index.ts
src/modules/story/: Story.tsx
src/modules/tiptap/: Editor.vue
src/modules/todo/: Test.vue  Todo.tsx  Todo.vue  index.ts
src/stores/: index.ts  useProjectStore.ts
src/styles/: fonts.css  globals.css
src/styles/theme/: dark.css  light.css
src/tiptap/editor/: Footer.tsx  Header.tsx  RichTextEditor.tsx  ToolBar.tsx
src/tiptap/hooks/: index.ts  use-tiptap-editor.ts  use-toc.tsx
src/tiptap/ui/: DragHandler.tsx  FontFamilyDropdown.tsx  FontSizeDropdown.tsx  HeadingDropdown.tsx  HighlightPopover.tsx  HistoryButton.tsx  LinkPopover.tsx  ListDropdown.tsx  MarkButton.tsx  NodeButton.tsx  Spacer.tsx  TextAlignDropdown.tsx  ToC.tsx  ToCProvider.tsx  index.ts
src/utils/: font.ts
src/views/: Splash.tsx
(+94 files in other folders)
