[package]
name = "Kosmos"
version = "0.0.1"
description = "The Kosmos App"
authors = ["Kosmos"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kosmos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.29"
semver = "1.0.27"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-devtools = "2.0.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v7"] }
zstd = "0.13.3"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
