[package]
name = "Kosmos"
version = "0.0.1"
description = "The Kosmos App"
authors = ["Kosmos"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kosmos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
log = "0.4.29"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.145"
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid"] }
specta-typescript = "0.0.9"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "macros"] }
tauri = { version = "2.9.5", features = [] }
tauri-plugin-devtools = "2.0.1"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-log = "2.7.1"
tauri-plugin-opener = "2.5.2"
tauri-specta = { version = "2.0.0-rc.21", features = ["javascript", "typescript"] }
tempfile = "3.10.1"
thiserror = "2.0.17"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1.19.0", features = ["serde", "v7"] }
zip = { version = "2.1.0", features = ["zstd"] }
zstd = "0.13.3"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
